Prevented footer stretching for really wide displays

--- a/components/footer/Footer.module.sass
+++ b/components/footer/Footer.module.sass
@@ -174,5 +174,8 @@
   .flexcol
     flex: 1
 
-  // .footer_container div:nth-child(1)
-  //   color: red
+@media screen and ( min-width: 1600px )
+  .footer_left
+    padding-left: 50%
+  .footer_right
+    padding-right: 50%
