--- a/components/footer/FooterLoggedIn.module.sass
+++ b/components/footer/FooterLoggedIn.module.sass
@@ -67,3 +67,8 @@
   .f_browse, .f_jobs, .f_connect
     font-size: 0.8rem
     text-align: left
+
+@media screen and ( min-width: 1600px )
+  .flex_container
+    padding-left: 30%
+    padding-right: 30%
